blog post on reproducible research for management tasks

--- a/org/_posts/2018-05-10-context-hydra.org
+++ b/org/_posts/2018-05-10-context-hydra.org
@@ -7,6 +7,7 @@
 layout: post
 title: Using context dependent Hydras in Emacs
 categories: org-mode Emacs
+author: Derek Feichtinger
 ---
 #+END_EXPORT
 
